# App-salmon

./: .gitignore  Cargo.toml  README.md  justfile
docs/: DESIGN.md
scripts/: setup-e2e-env.sh
scripts/vm/: e2e-vm-down.sh  e2e-vm-run-tests.sh  e2e-vm-status.sh  e2e-vm-up.sh  guest-init.sh  guest-provision.sh  lib.sh  run-e2e-in-vm.sh  setup-vm-host.sh
src/: client_workers.rs  config.rs  error.rs  lib.rs  main.rs  redacted.rs  telemetry.rs  test_support.rs  worker_pool.rs
src/adapters/: docker_bollard.rs  mod.rs  rand_secrets.rs  sqlite_repository.rs  sudo_exec.rs  system_clock.rs  system_users.rs  tokio_filesystem.rs
src/auth/: hashing.rs  mod.rs
src/backends/: health_wait.rs  mod.rs  postgres.rs  supabase.rs
src/domain/: cluster.rs  ids.rs  mod.rs  service_kind.rs  tar_validation.rs
src/http/: handler_tests.rs  handlers.rs  mod.rs  openapi.rs
src/ports/: clock.rs  container_runtime.rs  filesystem.rs  mod.rs  privileged_exec.rs  repository.rs  secrets.rs
src/service/: cluster_service.rs  deps.rs  log_rotation.rs  mod.rs  reconciliation.rs  spawn_task.rs  teardown_task.rs  ttl_reaper.rs
tests/e2e/: common.rs  create_cluster.rs  create_supabase_cluster.rs  delete_cluster.rs  info_cluster.rs  list_clusters.rs  main.rs  ttl_expiry.rs
